<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Kokaihop</string>
    <string name="something_went_wrong_msg">Something went wrong, try again!</string>
    <string name="check_intenet_connection">No Internet Available!</string>
    <string name="space_character">\u0020</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="or_login_text">Or Log In using Email</string>
    <string name="signup_now_text">Not yet a Kokaihop chef? Sign Up now</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="password_validation_msg">Password must have atleast seven characters</string>
    <string name="sucess_login">Login Success!</string>
    <string name="failed_login">Login Failed!</string>
    <string name="failed">Failed!</string>
    <string name="forgot_success_msg">Instructions on how to reset your password has been sent to
        your e-mail.
    </string>
    <string name="incorrect_email_passwd">Email or password is incorrect. Please try again.</string>
    <string name="user_already_exists">A user with the email address you provided already exists
    </string>
    <string name="facebook_login">Log In Via Facebook</string>
    <string name="facebook_app_id">119229822371</string>
    <string name="facebook_email_permisson">email</string>
    <string name="facebook_public_profile_permisson">public_profile</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="nyhetsbrev">Nyhetsbrev</string>
    <string name="dagens_recept">Dagens recept</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_via_facebook">Sign Up via Facebook</string>
    <string name="already_a_kokaihop_chef_login_here">Already a Kokaihop chef?
        <b>Login here</b>
    </string>
    <string name="close">X</string>
    <string name="close_label">Close</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="submit">Submit</string>
    <string name="cities">Cities</string>
    <string name="cancel">Cancel</string>
    <string name="name_required">Name Required</string>
    <string name="city_validation_msg">City Required</string>
    <string name="signup_success">SignUp Success</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">Search</string>
    <string name="unable_access_fb_detai">Unable to access your facebook details!</string>
    <string name="signup_message">As a logged in user you can here see your followers, search history and follow other chefs.
    </string>
    <string name="sign_up_or_login">Login or become member for free!</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="daily_email_preferences">Daily Email Preferences</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_course_of_the_day">Main Course of the Day</string>
    <string name="appetizer_of_the_day">Appetizer of the Day</string>
    <string name="cookie_of_the_day">Cookie of the Day</string>
    <string name="desert_of_the_day">Dessert of the Day</string>
    <string name="vegetarian_of_the_day">Vegetarian of the Day</string>
    <string name="text_previous">Previous</string>
    <string name="cook_something_creating_today">Most recent 60 days</string>
    <string name="tab_main_course_of_the_day">Main Course of the Day</string>
    <string name="tab_appetizer_of_the_day">Appetizer of the Day</string>
    <string name="tab_cookie_of_the_day">Cookie of the Day</string>
    <string name="tab_dessert_of_the_day">Dessert of the Day</string>
    <string name="tab_vegetarian_of_the_day">Vegetarian of the Day</string>
    <string name="tab_feed">Recipes</string>
    <string name="tab_cookbooks">Cookbooks</string>
    <string name="tab_list">List</string>
    <string name="tab_comments">Comments</string>
    <string name="tab_me">Me</string>
    <string name="tab_recipes">Recipes</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Followings</string>
    <string name="tab_history">History</string>
    <string name="user_inactive_tab_text_color">#FFD4D4D4</string>
    <string name="user_active_tab_text_color">#FFF75A15</string>
    <string name="follow">FOLLOW</string>
    <string name="following">FOLLOWING</string>
    <string name="access_profile">Access Profile</string>
    <string name="signup_dialog_message">As a logged in user you can here see your followers, search history and follow other chefs.
    </string>
    <string name="login_comment_message">You need to logged in to comment on recipe</string>
    <string name="login_reply_on_comment_message">You need to logged in to reply on comment</string>
    <string name="login_rating_message">You need to logged in to rate a recipe</string>
    <string name="members_area">Members area</string>
    <string name="login_like_message">You need to logged in to make a recipe favourite</string>
    <string name="login_upload_pic_message">You need to logged in to upload a recipe image
    </string>
    <string name="login_add_to_cookbook_message">You need to logged in to add a recipe to
        cookbook
    </string>
    <string name="welcome_text">Welcome to kokaihop.se!</string>
    <string name="like_to_rate_text">Would you like to rate your yum experience?</string>
    <string name="write_a_comment_text">Write a comment...</string>
    <string name="text_upload_image_to_recipe">upload image to recipe</string>
    <string name="portion_text">Portion</string>
    <string name="text_created">Skapat</string>
    <string name="text_by">av</string>
    <string name="text_add_to_list">Add to list</string>
    <string name="text_Ingredients">Ingredients</string>
    <string name="text_SimilarRecipies">Similar Recipes</string>
    <string name="text_comments">Comments</string>
    <string name="text_directions">Direction</string>
    <string name="count"><![CDATA[
        <b>%1$s</b>
        visad, <b>%2$s</b> utskriven, <b>%3$s</b> tillagd i saml]]>
    </string>
    <string name="add_portion">Change the number of servings</string>
    <string name="done">Done</string>
    <string name="add_comments">Add Comments</string>
    <string name="settings">Settings</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_confirmed_msg">Password didn\'t match</string>
    <string name="password_updated">Password Updated Successfully</string>
    <string name="password_not_updated">Password cannot be Updated</string>
    <string name="email_preferences">Email Preferences</string>
    <string name="today_s_recipes_motion">Today\'s Recipes Motion</string>
    <string name="drinking_tips">Drinking Tips and alcohol-related mailings</string>
    <string name="no_email">I do not want to receive newsletters</string>
    <string name="settings_updated">Settings Updated</string>
    <string name="settings_not_updated">Settings Can\'t be updated</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="choose_profile_pic">Choose Profile Picture</string>
    <string name="take_photo">Take Picture</string>
    <string name="choose_from_library">Choose From Camera Roll</string>
    <string name="add_photo">Choose an option!</string>
    <string name="select_file">Select File</string>
    <string name="sd_card_error">Please check SD card!!</string>
    <string name="fileprovider">.fileprovider</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="hint_text_reply_comment">Reply to</string>
    <string name="text_send">Send</string>
    <string name="email_share_content">
        <![CDATA[<b>Jag vill tipsa dig om ett bra recept från kokaihop.se!</b> <br/> %1$s <br/> Läs receptet här : <a href="https://www.kokaihop.se/%2$s">%3$s</a> <br/> <br/>Ladda ned från: <br/> http://onelink.to/f6n497]]></string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="profile_pic_uploaded">Profile Picture uploaded Successfully</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="follow_success">Follow Successful</string>
    <string name="unfollow_success">Unfollow Successful</string>
    <string name="recipe">"Recipe(s) "</string>
    <string name="by">"By "</string>
    <string name="city_updated">City updated successfully</string>
    <string name="city_updation_failed">Error while updating city</string>
    <string name="profile_pic_upload_success">Profile Picture uploaded Successfully</string>
    <string name="profile_pic_upload_failed">Error while updating profile picture</string>
    <string name="cookbooks_login_msg1">Save your favourites recipes in cookbooks</string>
    <string name="cookbooks_login_msg2">You can classify recipes in your own way and refer them
        later
    </string>
    <string name="my_cookbooks">My Cookbooks</string>
    <string name="create">Create</string>
    <string name="recipe_count">" Recipes"</string>
    <string name="empty_comment_msg">comment cannot be empty</string>
    <string name="rating_dialog_text">Thanks for Rating recipe \n a</string>
    <string name="text_reply">Reply</string>
    <string name="replied_text">" replied"</string>
    <string name="text_and">" and "</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="newly_added_recipe">
        <b>Newely Added Recipe</b>
    </string>
    <string name="explore_now">
        <b>Explore Now</b>
    </string>
    <string name="label_course">Course</string>
    <string name="label_cuisine">Cuisine</string>
    <string name="label_method">Method</string>
    <string name="all">All</string>
    <string name="select_course">Select Course</string>
    <string name="select_cuisine">Select Cuisine</string>
    <string name="select_method">Select Method</string>
    <string-array name="sort_by">
        <item>@string/best_rating</item>
        <item>@string/comments</item>
        <item>@string/popular</item>
        <item>@string/recommended</item>
        <item>@string/latest</item>
        <item>@string/title_a_z</item>
        <item>@string/title_z_a</item>
    </string-array>
    <string name="search_recipes_ingredents">Search recipes or ingredients</string>
    <string name="latest_search">LATEST SEARCHES</string>
    <string name="recipe_results">%1$s Recipe Results</string>
    <string name="best_rating">Best rating</string>
    <string name="comments">Comments</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="are_you_sure_you_want_to_delete_this_cookbook">Are you sure you want to delete
        this cookbook?
    </string>
    <string name="this_will_delete_the_cookbook_and_its_recipes">
        This will permanently delete recipes in the cookbook?
    </string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="kokaihop_dialog">Kokaihop Dialog</string>
</resources>