<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_round_corner_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/sign_up"
            app:font="@{`SS-ProBold`}"/>

        <TextView
            android:id="@+id/dialog_title_msg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/signup_message"
            app:font="@{`SS-ProRegular`}"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/dialog_log_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login"
            app:font="@{`SS-ProRegular`}"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/dialog_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/sign_up"
            app:font="@{`SS-ProRegular`}"/>
        <View
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cancel"
            app:font="@{`SS-ProRegular`}"/>

    </LinearLayout>
</layout>