<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/sign_up_background"
                android:orientation="vertical">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_drawable_facebook_sign_up">
            <TextView android:id="@+id/text_view_label_sign_up"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_horizontal"
                      android:text="@string/sign_up"
                      android:textColor="@color/white"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:textSize="@dimen/sign_up_label_text_size"/>

            <TextView android:id="@+id/text_view_close" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:text="@string/close"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:textColor="@color/white" android:textSize="@dimen/sign_up_label_text_size"/>

            <View android:id="@+id/view_seperator"
                  style="@style/Divider"
                  android:layout_alignBottom="@+id/text_view_label_sign_up"/>

            <EditText android:id="@+id/edit_text_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/text_view_label_sign_up"
                      android:backgroundTint="@color/white"
                      android:hint="@string/name"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/edit_text_name"
                      android:backgroundTint="@color/white"
                      android:hint="@string/email"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:inputType="textEmailAddress"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:layout_below="@+id/edit_text_email"
                      android:backgroundTint="@color/white"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_city"
                      android:layout_width="match_parent"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/edit_text_password"
                      android:backgroundTint="@color/white"
                      android:hint="@string/city"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <CheckBox android:id="@+id/checkBox_dagens_recept"
                      android:layout_width="wrap_content"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:layout_height="wrap_content"
                      android:layout_alignParentLeft="true"
                      android:layout_below="@id/edit_text_city"
                      android:buttonTint="@color/white"
                      android:text="@string/dagens_recept"
                      android:textColor="@color/white"/>

            <CheckBox android:id="@+id/check_box_nyhetsbrev"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:layout_alignParentRight="true"
                      android:layout_below="@id/edit_text_city"
                      android:buttonTint="@color/white"
                      android:text="@string/nyhetsbrev"
                      android:textColor="@color/white"/>

            <Button android:id="@+id/button_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_views_signup"
                    android:layout_below="@id/check_box_nyhetsbrev"
                    android:background="@color/sign_up_button_background"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

            <Button android:id="@+id/button_facebook_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_views_signup"
                    android:layout_below="@id/button_sign_up"
                    android:background="@color/sign_up_facebook_button_background"
                    android:drawableLeft="@drawable/com_facebook_button_icon_white"
                    android:padding="@dimen/padding_drawable_facebook_sign_up"
                    android:text="@string/sign_up_via_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

            <TextView android:id="@+id/text_view_already_sign_up"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:layout_below="@id/button_facebook_sign_up"
                      android:gravity="center"
                      android:text="@string/already_a_kakoihop_chef_login_here"
                      android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>