<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable name="viewModel" type="com.kokaihop.authentication.signup.SignUpViewModel"/>

    </data>


    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F5E0CF"
    >
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_drawable_facebook_sign_up">

            <TextView android:id="@+id/text_view_label_sign_up"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:gravity="center_horizontal"
                      android:text="@string/sign_up"
                      android:textColor="@color/white"
                      android:textSize="@dimen/sign_up_label_text_size"/>

            <TextView android:id="@+id/text_view_close"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:text="@string/close"
                      android:textColor="@color/white"
                      android:textSize="@dimen/sign_up_label_text_size"/>

            <View android:id="@+id/view_seperator"
                  style="@style/Divider"
                  android:layout_alignBottom="@+id/text_view_label_sign_up"/>

            <EditText android:id="@+id/edit_text_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/text_view_label_sign_up"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:backgroundTint="@color/white"
                      android:hint="@string/name"
                      android:text="@={viewModel.name}"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/edit_text_name"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:backgroundTint="@color/white"
                      android:hint="@string/email"
                      android:text="@={viewModel.userName}"
                      android:inputType="textEmailAddress"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/edit_text_email"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:backgroundTint="@color/white"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      android:textColor="@color/white"
                      android:text="@={viewModel.password}"
                      android:textColorHint="@color/white"/>

            <EditText android:id="@+id/edit_text_city"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/edit_text_password"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:backgroundTint="@color/white"
                      android:hint="@string/city"
                      android:text="@={viewModel.city}"
                      android:onClick="@{(v)->viewModel.openCityScreen(v)}"
                      android:textColor="@color/white"
                      android:textColorHint="@color/white"/>

            <CheckBox android:id="@+id/checkBox_dagens_recept"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentLeft="true"
                      android:layout_below="@id/edit_text_city"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:buttonTint="@color/white"
                      android:text="@string/dagens_recept"
                      android:onCheckedChanged="@{()->viewModel.onCheckChangeNewsletter(checkBoxDagensRecept)}"
                      android:textColor="@color/white"/>

            <CheckBox android:id="@+id/check_box_nyhetsbrev"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:layout_below="@id/edit_text_city"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:buttonTint="@color/white"
                      android:onCheckedChanged="@{()->viewModel.onCheckChangeSuggestion(checkBoxNyhetsbrev)}"
                      android:text="@string/nyhetsbrev"
                      android:textColor="@color/white"/>

            <Button android:id="@+id/button_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/check_box_nyhetsbrev"
                    android:layout_marginTop="@dimen/margin_top_views_signup"
                    android:background="@color/sign_up_button_background"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:onClick="@{(v)->viewModel.signup(v)}"
                    android:textColor="@color/white"/>

            <Button android:id="@+id/button_facebook_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_sign_up"
                    android:layout_marginTop="@dimen/margin_top_views_signup"
                    android:background="@color/sign_up_facebook_button_background"
                    android:padding="@dimen/padding_drawable_facebook_sign_up"
                    android:text="@string/sign_up_via_facebook"
                    android:textAllCaps="false"
                    android:onClick="@{(v)->viewModel.signUpWithFacebook(v)}"
                    android:textColor="@color/white"/>

            <TextView android:id="@+id/text_view_already_sign_up"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/button_facebook_sign_up"
                      android:layout_marginTop="@dimen/margin_top_views_signup"
                      android:gravity="center"
                      android:text="@string/already_a_kakoihop_chef_login_here"
                      android:onClick="@{(v)->viewModel.openLoginScreen(v)}"
                      android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>

        <include
            layout="@layout/progress_bar"
            bind:viewModel="@{viewModel}"/>

    </FrameLayout>
</layout>
