<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/new_cookbook_dialog_background">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_cookbook_delete_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dialog_delete_cookbook_title_margin_top"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete_this_cookbook"
            android:textColor="@color/grey_FF71767F"
            android:textSize="@dimen/text_size_large"
            app:font="@{`SS-ProRegular`}"/>
        <TextView
            android:id="@+id/cookbook_delete_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_new_cookbook_name_height"
            android:layout_below="@+id/dialog_cookbook_delete_title"
            android:gravity="center"
            android:paddingEnd="@dimen/dialog_delete_cookbook_msg_hor_padding"
            android:paddingStart="@dimen/dialog_delete_cookbook_msg_hor_padding"
            android:text="@string/this_will_delete_the_cookbook_and_its_recipes"
            android:textColor="@color/grey_FF8D929C"
            android:textSize="@dimen/text_size_small"
            app:font="@{`SS-ProRegular`}"/>

        <View
            android:id="@+id/dialog_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_below="@+id/cookbook_delete_msg"
            android:layout_marginTop="@dimen/dialog_delete_cookbook_name_margin"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_new_cookbook_button_height"
            android:layout_below="@+id/dialog_divider"
            android:weightSum="2">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="@dimen/none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/blue_FF198CFF"
                android:textSize="@dimen/text_size_small"
                app:font="@{`SS-ProRegular`}"/>

            <View android:layout_width="@dimen/divider_height"
                  android:layout_height="match_parent"
                  android:background="@color/colorPrimary"/>
            <TextView
                android:id="@+id/delete_cookbbok"
                android:layout_width="@dimen/none"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_small"
                app:font="@{`SS-ProRegular`}"/>


        </LinearLayout>

    </RelativeLayout>
</layout>
