<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_layout_without_border"
        android:padding="@dimen/input_dialog_padding">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/kokaihop_dialog"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:font="@{`SS-ProRegular`}"/>
        <EditText
            android:id="@+id/dialog_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_new_cookbook_name_height"
            android:layout_below="@+id/dialog_title"
            android:layout_marginTop="@dimen/dialog_new_cookbook_name_margin"
            android:background="@drawable/round_corner_layout"
            android:inputType="textPersonName"
            android:padding="@dimen/dialog_new_cookbook_name_padding"
            android:textSize="@dimen/text_size_medium"
            app:font="@{`SS-ProRegular`}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_text"
            android:layout_marginTop="@dimen/dialog_new_cookbook_button_margin_top"
            android:layoutDirection="rtl">

            <TextView
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>
</layout>
